Revision history for JSON-Schema-Modern

{{$NEXT}}

0.558     2022-11-26 02:43:15Z
          - add fallback media type handling for text/*
          - performance is (hopefully) improved by delaying some calculations
            in annotations until they are needed

0.557     2022-10-30 21:59:04Z
          - improvements to processing of keywords in the Content vocabulary
            (contentEncoding, contentMediaType, contentSchema)
          - LICENSE now provided with bundled metaschema files

0.556     2022-09-18 22:41:50Z
          - some performance optimizations for schema traversal and evaluation

0.555     2022-09-10 21:43:11Z
          - the "iri-reference" format is now supported, sort of (all strings
            will be accepted as valid)
          - "enum" no longer incorrectly errors if elements are not unique
          - new experimental output format: "data_only", which encapsulates
            what is produced when a JSON::Schema::Modern::Result object is
            stringified

0.554     2022-07-24 00:08:54Z
          - use new Slurpy type in Types::Standard

0.553     2022-06-25 03:27:14Z
          - expanded on the documentation for serializing results.
          - updated IETF URI references from draft-bhutton-json-schema-00
            to draft-bhutton-json-schema-01, to reflect the updates to
            specification draft2020-12 (implementation updates have already
            been reflected in earlier releases, notably 0.548 and 0.550)

0.552     2022-05-03 03:31:59Z
          - fix result serialization from exceptions (broken in 0.550)

0.551     2022-05-01 01:29:51Z
          - the "specification_version" configuration option now accepts
            values without "draft" in the name, to facilitate a new naming
            convention used for future specification versions
          - new "formatted_annotations" option for JSON::Schema::Modern::Result,
            to allow for omitting annotations from result output
