@@ -93,8 +93,7 @@ sub _eval_keyword_id ($self, $data, $schema, $state) {
   $state->{schema_path} = '';
   $state->{spec_version} = $schema_info->{specification_version};
   $state->{vocabularies} = $schema_info->{vocabularies};
-  # it's possible that a different schema resource has its own set of configs, different from the
-  # JSM attribute value
+
   if ($state->{validate_formats}) {
     $state->{vocabularies} = [
       map s/^JSON::Schema::Modern::Vocabulary::Format\KAnnotation$/Assertion/r, $state->{vocabularies}->@*
