@@ -15,6 +15,7 @@ format-duration.json                         9          0     0
 format-ipv4.json                             4          0     0
 format-relative-json-pointer.json            7          0     0
 format-time.json                            13          0     0
+formats.json                                 4          0     0
 id.json                                      6          0     0
 integers.json                               29          0     0
 keyword-independence.json                  884          0     0
@@ -26,4 +27,4 @@ short-circuit.json                          20          0     0
 unknownKeyword.json                          4          0     0
 vocabulary.json                             11          0     0
 ---------------------------------------------------------------
-TOTAL                                     1032          0     0
+TOTAL                                     1036          0     0
